# CppProjectSamples

Cli/: .editorconfig  CMakeLists.txt  vcpkg.json
Cli/src/: MyCodeLib.cpp  MyCodeLib.h  main.cpp
Cli/tests/: CMakeLists.txt
Cli/tests/src/: MyCodeLibTest.cpp
GameSFML/: CMakeLists.txt  vcpkg.json
GameSFML/src/: main.cpp
GameSdl2OpenGL/: CMakeLists.txt  vcpkg.json
GameSdl2OpenGL/src/: main.cpp
